Spacing for items on mobile & responsive fixes

--- a/less/boxmenu.less
+++ b/less/boxmenu.less
@@ -5,15 +5,17 @@
 
 .menu {
 	background: @primary-color;
+	
 	.menu-container {
 		.responsive-large;
 		.responsive-medium;
 		.responsive-small;
-		
 	}
+
 	.menu-container-inner {
 		padding:@content-padding;
 	}
+
 	.menu-item {
 		.responsive-medium;
 		.responsive-small;
@@ -28,6 +30,7 @@
 				margin-left:5%;
 			}
 		}
+
 		&.nth-child-odd{
 			clear: both;
 			
@@ -45,20 +48,25 @@
 	.menu-item-title {
 		padding:@article-body-padding;
 	}
+
 	.menu-item-body {
 		padding:@article-body-padding;
 	}
+
 	.menu-item-button {
 		padding:@article-body-padding;
+		
 		a {
 			text-decoration: none;
 			background-color:@button-color;
 			color:@button-text-color;
 			padding:@button-padding;
+			
 			&:hover {
 				background-color:@button-hover-color;
 				color:@button-text-hover-color;
 			}
+			
 			&.visited {
 				background-color:@button-disabled-color;
 				color:@button-text-disabled-color;
@@ -70,18 +78,26 @@
 
 
 @media all and (max-width:760px) {
-	.menu-title{
-		padding:15px 20px 0;
+	.menu-title-inner{
+		padding:15px 0 0;
 	}
-	.menu-body{
-		padding:0px 20px 10px;
+
+	.menu-body-inner{
+		padding:0px 0 10px;
 	}
+
    	.menu{
+
    		.menu-inner {
 			padding:0;
 		}
+
 		.menu-item{
+			width:100%;
+			margin-bottom:20px;
+			
 			&.nth-child-even, &.nth-child-odd{
+				
 				.menu-item-inner{
 					margin:0;
 				}
@@ -89,5 +105,3 @@
 		}
    	}
 }
-
-
